# construct dependencie
#   DEPENDENCY_INCLUDES
#   DEPENDENCY_LIBS
#   DEPENDENCY_BIN_PATHS
#   TEST_DEPENDENCY_INCLUDES
#   TEST_DEPENDENCY_LIBS
#   TEST_DEPENDENCY_BIN_PATHS

set (_DEPENDENCY_NAMES "")
set (_DEPENDENCY_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR})
set (_DEPENDENCY_LIBS "")
set (_DEPENDENCY_BIN_PATHS "")

add_subdirectory("cereal")
list (APPEND _DEPENDENCY_NAMES "cereal")
list (APPEND _DEPENDENCY_INCLUDES ${CEREAL_INCLUDES})

add_subdirectory("eigen3")
list (APPEND _DEPENDENCY_NAMES "eigen3")
list (APPEND _DEPENDENCY_INCLUDES ${EIGEN3_INCLUDES})

add_subdirectory("soil")
list (APPEND _DEPENDENCY_NAMES "soil")
list (APPEND _DEPENDENCY_INCLUDES ${SOIL_INCLUDES})
list (APPEND _DEPENDENCY_LIBS ${SOIL_LIBS})

set (DEPENDENCY_NAMES ${_DEPENDENCY_NAMES} PARENT_SCOPE)
set (DEPENDENCY_INCLUDES ${_DEPENDENCY_INCLUDES} PARENT_SCOPE)
set (DEPENDENCY_LIBS ${_DEPENDENCY_LIBS} PARENT_SCOPE)
set (DEPENDENCY_BIN_PATHS ${_DEPENDENCY_BIN_PATHS} PARENT_SCOPE)

if (${BuildUnitTest})   
    add_subdirectory("googletest")
    set (TEST_DEPENDENCY_NAMES "googletest" PARENT_SCOPE)
    set (TEST_DEPENDENCY_INCLUDES ${GTEST_INCLUDES} PARENT_SCOPE)
    set (TEST_DEPENDENCY_LIBS ${GTEST_LIBS} PARENT_SCOPE)
    set (TEST_DEPENDENCY_BIN_PATHS "" PARENT_SCOPE)
endif()